--- a/package.json
+++ b/package.json
@@ -29,9 +29,14 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.2",
     "webpack-node-externals": "^1.3.2"
   },
   "dependencies": {
+    "express": "^4.14.0",
+    "jade": "^1.11.0",
+    "socket.io": "^1.4.8",
     "source-map-support": "^0.4.2"
   }
 }
