--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "express": "^4.14.0",
+    "font-awesome": "^4.6.3",
     "jade": "^1.11.0",
     "socket.io": "^1.4.8",
     "source-map-support": "^0.4.2"
